--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
             <meta charset="UTF-7">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title> Note Log </title>
+<!--             <title> Note Log </title> -->
             <link  href="Front Page editing.css" rel="stylesheet" type=""text/css">
             </head>
 <body>            
